--- a/api/.eslintrc.json
+++ b/api/.eslintrc.json
@@ -5,21 +5,18 @@
     },
     "extends": [
         "eslint:recommended",
-        "plugin:react/recommended",
         "plugin:@typescript-eslint/recommended"
     ],
-    "overrides": [],
+    "overrides": [
+    ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
     "plugins": [
-        "react",
         "@typescript-eslint"
     ],
     "rules": {
-        // suppress errors for missing 'import React' in files
-        "react/react-in-jsx-scope": "off"
     }
 }
