--- a/api/package.json
+++ b/api/package.json
@@ -1,22 +1,23 @@
 {
   "dependencies": {
-    "@prisma/client": "^4.5.0",
-    "express": "^4.18.2"
+    "@prisma/client": "^4.6.0",
+    "express": "^4.18.2",
+    "prisma-cascade-delete": "^1.0.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
-    "@typescript-eslint/eslint-plugin": "^5.42.0",
-    "@typescript-eslint/parser": "^5.42.0",
-    "eslint": "^8.26.0",
+    "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "@typescript-eslint/parser": "^5.42.1",
+    "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.4.0",
+    "eslint-plugin-n": "^15.5.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "prettier": "^2.7.1",
-    "prisma": "^4.5.0",
+    "prisma": "^4.6.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
