--- a/api/package.json
+++ b/api/package.json
@@ -1,8 +1,7 @@
 {
   "dependencies": {
     "@prisma/client": "^4.6.0",
-    "express": "^4.18.2",
-    "prisma-cascade-delete": "^1.0.2"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
