--- a/api/package.json
+++ b/api/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "@prisma/client": "^4.6.0",
+    "@prisma/client": "^4.6.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
@@ -15,8 +15,9 @@
     "eslint-plugin-n": "^15.5.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
+    "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
-    "prisma": "^4.6.0",
+    "prisma": "^4.6.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
