--- a/ui/package.json
+++ b/ui/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.10.16",
     "@mui/lab": "^5.0.0-alpha.111",
     "@mui/material": "^5.10.14",
+    "mui-file-input": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
