--- a/api/package.json
+++ b/api/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@prisma/client": "^4.6.1",
+    "app-root-path": "^3.1.0",
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
