--- a/ui/package.json
+++ b/ui/package.json
@@ -2,12 +2,14 @@
   "name": "db-term-project-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.16",
     "@mui/lab": "^5.0.0-alpha.111",
     "@mui/material": "^5.10.14",
+    "axios": "^1.2.1",
     "mui-file-input": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
