--- a/ui/package.json
+++ b/ui/package.json
@@ -12,7 +12,9 @@
     "axios": "^1.2.1",
     "mui-file-input": "^1.1.3",
     "react": "^18.2.0",
+    "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
+    "react-player": "^2.11.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-timer-hook": "^3.0.5",
@@ -35,6 +37,7 @@
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
     "@types/redux": "^3.6.31",
+    "@types/video-react": "^0.15.1",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
     "eslint": "^8.28.0",
