--- a/ui/package.json
+++ b/ui/package.json
@@ -14,13 +14,13 @@
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
-    "react-player": "^2.11.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-timer-hook": "^3.0.5",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
+    "video-react": "^0.16.0",
     "web-vitals": "^3.1.0"
   },
   "devDependencies": {
